Fixed gallery gap

--- a/assets/scss/cards/_gallery.scss
+++ b/assets/scss/cards/_gallery.scss
@@ -17,11 +17,6 @@
 
 .kg-gallery-row {
     display: flex;
-    gap: 16px;
-
-    @include minwidth($tablet) {
-        gap: 32px;
-    }
 }
 
 .kg-gallery-image {
